Fixed header alignment

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ main {
 }
 
 header {
-    margin-top: 0.5rem;
+    margin-top: 1rem;
     margin-left: 0.5rem;
     margin-right: 0.5rem;
     text-align: center;
@@ -21,12 +21,12 @@ header {
 }
 
 .topLogo {
+    padding-top: 1rem;
     text-align: center;
-    width: 100%;
 }
 
 .brightmindsLogo {
-    display: block;
+    display: inline-block;
     text-align: center;
 }
 
@@ -202,7 +202,7 @@ a {
 #createTop {
     border: none;
     background-color: transparent;
-    margin-top: 2rem;
+    margin-top: 4rem;
     margin-bottom: 3rem;
 }
 
@@ -391,27 +391,31 @@ input[type=radio]:checked {
 .modal {
     display: block;
     margin: auto; /* 15% from the top and centered */
-    padding: 20px;
+    padding: 1rem;
+    padding-bottom: 1.8rem;
     border-radius: 0.5rem;
     background: #0F245B;
     width: 60%; /* Could be more or less, depending on screen size */ 
+    text-align: center;
 }
 
 .modal img {
-    display: block;
-    width: 90%;
     margin-bottom: 1.5rem;
+    text-align: center;
+    width: 100%;
 }
 
 /* Buttons: Aligns buttons */
-/* .buttons {
-    margin: auto;
-    width: 50%;
-    
-} */
+.buttons {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    text-align: center;
+}
 
 /* Connect to Cap button */
 .connectButton {
+    width: 12rem;
     background-color: #6FAE3D;
     color: white;
     padding: 1rem 1.5rem;
@@ -427,6 +431,7 @@ input[type=radio]:checked {
   
 /* The Close Button */
 .closeButton {
+    width: 12rem;
     background-color: #0F245B;
     color: white;
     padding: 1rem 1.5rem;
@@ -490,8 +495,15 @@ input[type=radio]:checked {
 }
 
 #retryButton {
+    text-align: center;
     background-color: #44A5FF;
     padding: 0.9rem 3.3rem;
     margin-top: 2rem;
     border-radius: 3px;
+    border: none;
+    color: white;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    font-weight: bolder;
+    letter-spacing: 0.05rem;
 }
